add fourth section, change logo, modify section titles and discriptions

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,19 +1,24 @@
 {
   "title": "PipeRider",
-  "logo": "/PrimeHub_icon.svg",
-  "section-hero-title": "Section Hero Title",
+  "logo": "/InfuseAI_icon_32.png",
+  "section-hero-title": "PipeRider",
   "section-hero-img": "/hero-image.jpg",
-  "section-hero-img-alt": "Hero Image Alt",
-  "section-hero-content": "Section Hero Content: Tortor consequat id porta nibh venenatis cras sed. Lectus sit amet est placerat in egestas erat imperdiet sed.",
+  "section-hero-img-alt": "Photo by Kevin Bhagat on Unsplash",
+  "section-hero-content": "Pipeline-wide Change Management for datasets, experiments, models, and deployments.",
   "section-hero-action": "Subscribe",
-  "section-secondary-title": "Section Secondary Title",
+  "section-secondary-title": "Consolidate All Data Updates Automatically",
   "section-secondary-img": "./richard-horvath-cPccYbPrF-A-unsplash.jpg",
   "section-secondary-img-alt": "Second Image Alt",
-  "section-secondary-content": "Section Secondary Content: Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque. Posuere lorem ipsum dolor sit amet. Sodales ut etiam sit amet nisl purus. Feugiat nibh sed pulvinar proin gravida hendrerit.",
+  "section-secondary-content": "Bring all the metadata together from any tool your team uses and get a clear understanding of all data flows, updates, sources, transformations, and dependencies.",
   "section-secondary-action": "Section Secondary Action",
-  "section-third-title": "Section Third Title",
+  "section-third-title": "Track, Trace, and Search for Changes of Data",
   "section-third-img": "/sunder-muthukumaran-n7eJHQwefeI-unsplash.jpg",
   "section-third-img-alt": "Third Image Alt",
-  "section-third-content": "Section Third Content: Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque. Posuere lorem ipsum dolor sit amet. Sodales ut etiam sit amet nisl purus. Feugiat nibh sed pulvinar proin gravida hendrerit.",
-  "section-third-action": "Section Third Action"
+  "section-third-content": "Keep track of any changes in code, training data, experiment metrics, Python dependencies, and everything in between, and search them with simple queries, in one single source.",
+  "section-third-action": "Section Third Action",
+  "section-fourth-title": "Get Real-time Notifications on Any Data Changese",
+  "section-fourth-img": "./richard-horvath-cPccYbPrF-A-unsplash.jpg",
+  "section-fourth-img-alt": "Third Fourth Alt",
+  "section-fourth-content": "Subscribe to events for metadata changes and trigger workflow actions from existing tools such as TensorBoard, Weights & Bias, MLFlow.",
+  "section-fourth-action": "Section Fourth Action"
 }
