--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,6 +6,7 @@
   "section-hero-img-alt": "Photo by Kevin Bhagat on Unsplash",
   "section-hero-content": "Pipeline-wide Change Management for datasets, experiments, models, and deployments.",
   "section-hero-action": "Subscribe",
+  "section-intro": "Metastore is a Python library to manage and track the ever-changing datasets, models, experiments, and artifacts in your ML pipeline.",
   "section-secondary-title": "Consolidate All Data Updates Automatically",
   "section-secondary-img": "./richard-horvath-cPccYbPrF-A-unsplash.jpg",
   "section-secondary-img-alt": "Second Image Alt",
@@ -20,5 +21,9 @@
   "section-fourth-img": "./richard-horvath-cPccYbPrF-A-unsplash.jpg",
   "section-fourth-img-alt": "Third Fourth Alt",
   "section-fourth-content": "Subscribe to events for metadata changes and trigger workflow actions from existing tools such as TensorBoard, Weights & Bias, MLFlow.",
-  "section-fourth-action": "Section Fourth Action"
+  "section-fourth-action": "Section Fourth Action",
+  "section-subscribe-title": "Keep me updates about PipeRider",
+  "section-subscribe-img": "./richard-horvath-cPccYbPrF-A-unsplash.jpg",
+  "section-subscribe-img-alt": "Third Fourth Alt",
+  "section-subscribe-action": "Subscribe News"
 }
