--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,6 +1,6 @@
 {
   "title": "PipeRider",
-  "logo": "/InfuseAI_icon_32.png",
+  "logo": "/pipe_rider_fake_logo.svg",
   "section-hero-title": "PipeRider",
   "section-hero-img": "/hero-image.jpg",
   "section-hero-img-alt": "Photo by Kevin Bhagat on Unsplash",
