--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -5,23 +5,23 @@
   "section-hero-img": "/hero-image.png",
   "section-hero-img-alt": "Photo by Kevin Bhagat on Unsplash",
   "section-hero-content": "Pipeline-wide Change Management for datasets, experiments, models, and deployments.",
-  "section-hero-action": "Subscribe",
+  "section-hero-action": "Join as Beta User",
   "section-intro": "PipeRider is a data change management solution for datasets, experiments, models, and deployments throughout all your pipelines, so you can: Build scalable applications with the most up-to-date datasets and models. Reuse, instead of duplicate, the complex pipelines for different projects. See all the data change occurrences from any source in a single status report.",
   "section-secondary-title": "Easy-to-understand Status Report",
   "section-secondary-img": "./easy-status-report.png",
   "section-secondary-img-alt": "Second Image Alt",
   "section-secondary-content": "One view for all changes happened across the pipeline.",
-  "section-secondary-action": "Section Secondary Action",
+  "section-secondary-action": "Join as Beta User",
   "section-third-title": "Change Timeline",
   "section-third-img": "/change-timeline.png",
   "section-third-img-alt": "Third Image Alt",
   "section-third-content": "New dataset, new model, experiments, and alerts. Showed in one timeline.",
-  "section-third-action": "Section Third Action",
+  "section-third-action": "Join as Beta User",
   "section-fourth-title": "Live Report Integration",
   "section-fourth-img": "./live-report.jpeg",
   "section-fourth-img-alt": "Fourth Image Alt",
   "section-fourth-content": "Create your own report with live data from PipeRider.",
-  "section-fourth-action": "Section Fourth Action",
+  "section-fourth-action": "Join as Beta User",
   "section-subscribe-title": "Keep me updates about PipeRider",
   "section-subscribe-img": "./richard-horvath-cPccYbPrF-A-unsplash.jpg",
   "section-subscribe-img-alt": "Third Fourth Alt",
