--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,7 +6,7 @@
   "section-hero-img-alt": "Photo by Kevin Bhagat on Unsplash",
   "section-hero-content": "Pipeline-wide Change Management for datasets, experiments, models, and deployments.",
   "section-hero-action": "Join as Beta User",
-  "section-intro": "PipeRider is a data change management solution for datasets, experiments, models, and deployments throughout all your pipelines, so you can: Build scalable applications with the most up-to-date datasets and models. Reuse, instead of duplicate, the complex pipelines for different projects. See all the data change occurrences from any source in a single status report.",
+  "section-intro": "PipeRider is a data change management solution for datasets, experiments, models, and deployments throughout all your pipelines, so you can:\n Build scalable applications with the most up-to-date datasets and models.\n Reuse, instead of duplicate, the complex pipelines for different projects.\n See all the data change occurrences from any source in a single status report.",
   "section-secondary-title": "Easy-to-understand Status Report",
   "section-secondary-img": "./easy-status-report.png",
   "section-secondary-img-alt": "Second Image Alt",
