modify the text

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,21 +6,21 @@
   "section-hero-img-alt": "Photo by Kevin Bhagat on Unsplash",
   "section-hero-content": "Pipeline-wide Change Management for datasets, experiments, models, and deployments.",
   "section-hero-action": "Join as Beta User",
-  "section-intro": "PipeRider is a data change management solution for datasets, experiments, models, and deployments throughout all your pipelines, so you can:\n Build scalable applications with the most up-to-date datasets and models.\n Reuse, instead of duplicate, the complex pipelines for different projects.\n See all the data change occurrences from any source in a single status report.",
-  "section-secondary-title": "Easy-to-understand Status Report",
+  "section-intro": "PipeRider is a data change management solution for datasets, experiments, models, and deployments\n throughout all your pipelines, so you can:\n * Build scalable applications with the most up-to-date datasets and models.\n * Reuse, instead of duplicate, the complex pipelines for different projects.\n * See all the data change occurrences from any source in a single status report.",
+  "section-secondary-title": "Consolidate All Data Updates Automatically",
   "section-secondary-img": "./easy-status-report.png",
   "section-secondary-img-alt": "Second Image Alt",
-  "section-secondary-content": "One view for all changes happened across the pipeline.",
+  "section-secondary-content": "Bring all the metadata together from any tool your team uses and get a clear understanding of all data flows, updates, sources, transformations, and dependencies..",
   "section-secondary-action": "Join as Beta User",
-  "section-third-title": "Change Timeline",
+  "section-third-title": "Track, Trace and Search for Data Change Occurrences",
   "section-third-img": "/change-timeline.png",
   "section-third-img-alt": "Third Image Alt",
-  "section-third-content": "New dataset, new model, experiments, and alerts. Showed in one timeline.",
+  "section-third-content": "Keep track of any changes in code, training data, experiment metrics, Python dependencies, and everything in between, and search them with simple queries, in one single source.",
   "section-third-action": "Join as Beta User",
-  "section-fourth-title": "Live Report Integration",
+  "section-fourth-title": "Get Real-time Notifications on Any Data Changes",
   "section-fourth-img": "./live-report.jpeg",
   "section-fourth-img-alt": "Fourth Image Alt",
-  "section-fourth-content": "Create your own report with live data from PipeRider.",
+  "section-fourth-content": "Subscribe to events for metadata changes and trigger workflow actions from existing tools such as TensorBoard, Weights & Bias, MLFlow.",
   "section-fourth-action": "Join as Beta User",
   "section-subscribe-title": "Keep me updates about PipeRider",
   "section-subscribe-img": "./richard-horvath-cPccYbPrF-A-unsplash.jpg",
