--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,6 +1,8 @@
 {
   "title": "PipeRider",
   "logo": "/pipe_rider_fake_logo.svg",
+  "favicon": "/pipe_rider_fake_logo.svg",
+  "og-image": "/pipe_rider_fake_logo.svg",
   "section-hero-title": "PipeRider Beta",
   "section-hero-img": "/hero-image.png",
   "section-hero-img-alt": "Photo by Kevin Bhagat on Unsplash",
