--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,7 +2,7 @@
   "title": "PipeRider",
   "logo": "/pipe_rider_fake_logo.svg",
   "favicon": "/pipe_rider_fake_logo.svg",
-  "og-image": "/pipe_rider_fake_logo.svg",
+  "og-image": "https://piperider.vercel.app/pipe_rider_fake_logo.svg",
   "section-hero-title": "PipeRider Beta",
   "section-hero-img": "/hero-image.png",
   "section-hero-img-alt": "Photo by Kevin Bhagat on Unsplash",
