--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -8,7 +8,7 @@
   "section-hero-img-alt": "Photo by Kevin Bhagat on Unsplash",
   "section-hero-content": "Pipeline-wide Change Management for datasets, experiments, models, and deployments.",
   "section-hero-action": "Join as Beta User",
-  "section-intro": "<h2>PipeRider is a data change management solution for datasets, experiments, models, and deployments <br/> throughout all your pipelines, so you can:</h2> <ul><li>Build scalable applications with the most up-to-date datasets and models.</li><li>Reuse, instead of duplicate, the complex pipelines for different projects.</li><li>See all the data change occurrences from any source in a single status report.</li></ul>",
+  "section-intro": "<h2>PipeRider is a data change management solution for datasets, experiments, models, and deployments <br/> throughout all your pipelines, so you can:</h2> <ul><li>Build scalable applications with the most up-to-date datasets and models.</li><li>Reuse, don’t duplicate, the complex pipelines for different projects.</li><li>See all the data change occurrences from any source in a single status report.</li></ul>",
   "section-secondary-title": "Consolidate All Data Updates Automatically",
   "section-secondary-img": "./easy-status-report.png",
   "section-secondary-img-alt": "Second Image Alt",
@@ -21,8 +21,8 @@
   "section-third-action": "Join as Beta User",
   "section-why-title-1": "This is helpful if YOU ARE:",
   "section-why-title-2": "This is helpful if YOU WANT TO:",
-  "section-why-content-1": "<ul><li>Frustrated keeping track of your data changes on spreadsheets or paper</li><li>Tired of working with multiple pipelines and datasets scattered all over the places</li><li>Spending unnecessary time and resources on duplicated models or pipelines</li></ul>",
-  "section-why-content-2": "<ul><li>Share the most up-to-date datasets, models, and experiment results across teams</li><li>Understand the dependency between datasets and models in your experiments</li><li>Build and scale your pipelines across multiple teams.</li></ul>",
+  "section-why-content-1": "<ul><li>Frustrated keeping track of your data changes on spreadsheets or paper.</li><li>Tired of working with multiple pipelines and datasets scattered all over the place.</li><li>Spending unnecessary time and resources on duplicated models or pipelines.</li></ul>",
+  "section-why-content-2": "<ul><li>Share the most up-to-date datasets, models, and experiment results across teams.</li><li>Understand the dependency between datasets and models in your experiments.</li><li>Build and scale your pipelines across multiple teams.</li></ul>",
   "section-fourth-title": "Get Real-time Notifications on Any Data Changes",
   "section-fourth-img": "./live-report.jpeg",
   "section-fourth-img-alt": "Fourth Image Alt",
