--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -28,7 +28,7 @@
   "section-fourth-img-alt": "Fourth Image Alt",
   "section-fourth-content": "Subscribe to events for metadata changes and trigger workflow actions from existing tools such as TensorBoard, Weights & Bias, MLFlow.",
   "section-fourth-action": "Join as Beta User",
-  "section-subscribe-title": "Keep me updates about PipeRider",
+  "section-subscribe-title": "Keep me updated about PipeRider",
   "section-subscribe-img": "./richard-horvath-cPccYbPrF-A-unsplash.jpg",
   "section-subscribe-img-alt": "Third Fourth Alt",
   "section-subscribe-action": "Subscribe News"
