modify CTA button wording

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -7,7 +7,7 @@
   "section-hero-img": "/hero-image.png",
   "section-hero-img-alt": "Photo by Kevin Bhagat on Unsplash",
   "section-hero-content": "Pipeline-wide Change Management for datasets, experiments, models, and deployments.",
-  "section-hero-action": "Join as Beta User",
+  "section-hero-action": "Sign Up for Early Access",
   "section-intro": "<h2>PipeRider is a data change management solution for datasets, experiments, models, and deployments <br/> throughout all your pipelines, so you can:</h2> <ul><li>Build scalable applications with the most up-to-date datasets and models.</li><li>Reuse, don’t duplicate, the complex pipelines for different projects.</li><li>See all the data change occurrences from any source in a single status report.</li></ul>",
   "section-secondary-title": "Consolidate All Data Updates Automatically",
   "section-secondary-img": "./easy-status-report.png",
@@ -27,7 +27,7 @@
   "section-fourth-img": "./live-report.jpeg",
   "section-fourth-img-alt": "Fourth Image Alt",
   "section-fourth-content": "Subscribe to events for metadata changes and trigger workflow actions from existing tools such as TensorBoard, Weights & Bias, MLFlow.",
-  "section-fourth-action": "Join as Beta User",
+  "section-fourth-action": "Get Early Access",
   "section-subscribe-title": "Keep me updated about PipeRider",
   "section-subscribe-img": "./richard-horvath-cPccYbPrF-A-unsplash.jpg",
   "section-subscribe-img-alt": "Third Fourth Alt",
