modify CTA button wording

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -27,9 +27,9 @@
   "section-fourth-img": "./live-report.jpeg",
   "section-fourth-img-alt": "Fourth Image Alt",
   "section-fourth-content": "Subscribe to events for metadata changes and trigger workflow actions from existing tools such as TensorBoard, Weights & Bias, MLFlow.",
-  "section-fourth-action": "Get Early Access",
+  "section-fourth-action": "Join as Beta User",
   "section-subscribe-title": "Keep me updated about PipeRider",
   "section-subscribe-img": "./richard-horvath-cPccYbPrF-A-unsplash.jpg",
   "section-subscribe-img-alt": "Third Fourth Alt",
-  "section-subscribe-action": "Subscribe News"
+  "section-subscribe-action": "Get Early Access"
 }
