--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -4,18 +4,18 @@
   "favicon": "/pipe_rider_fake_logo.svg",
   "og-image": "https://piperider.vercel.app/pipe_rider_fake_logo.svg",
   "section-hero-title": "PipeRider Beta",
-  "section-hero-img": "/change-timeline.png",
+  "section-hero-img": "/hero-image-new.png",
   "section-hero-img-alt": "Photo by Kevin Bhagat on Unsplash",
   "section-hero-content": "Pipeline-wide Change Management for datasets, experiments, models, and deployments.",
   "section-hero-action": "Sign Up for Early Access",
   "section-intro": "<h2>PipeRider is a data change management solution for datasets, experiments, models, and deployments <br/> throughout all your pipelines, so you can:</h2> <ul><li>Build scalable applications with the most up-to-date datasets and models.</li><li>Reuse, don’t duplicate, the complex pipelines for different projects.</li><li>See all the data change occurrences from any source in a single status report.</li></ul>",
   "section-secondary-title": "Consolidate All Data Updates Automatically",
-  "section-secondary-img": "./easy-status-report.png",
+  "section-secondary-img": "./model-changes.png",
   "section-secondary-img-alt": "Second Image Alt",
   "section-secondary-content": "Bring all the metadata together from any tool your team uses and get a clear understanding of all data flows, updates, sources, transformations, and dependencies..",
   "section-secondary-action": "Join as Beta User",
   "section-third-title": "Track, Trace and Search for Data Change Occurrences",
-  "section-third-img": "/change-timeline.png",
+  "section-third-img": "/timeline-changes-new.png",
   "section-third-img-alt": "Third Image Alt",
   "section-third-content": "Keep track of any changes in code, training data, experiment metrics, Python dependencies, and everything in between, and search them with simple queries, in one single source.",
   "section-third-action": "Join as Beta User",
